--- a/paper.tex
+++ b/paper.tex
@@ -115,6 +115,8 @@
 %\tocauthor{Authors' Instructions}
 \maketitle
 
+%John: Se cambia el termino técnica por método en todo el trabajo.
+
 \input{tex/abstract}
 
 \input{tex/introduction}
