--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -1,4 +1,5 @@
 \begin{abstract}
+%John: se ha realizado pequeñas mejoras en el abstracto pricipalmente en las conclusiones
 \textit{Context: }Integration of agile software development process (ASDP) with user-centred design (UCD) has awakened the interest of researchers during the last decade. However, to the best of our knowledge there is no clarity about what techniques or methods are being applied and how to apply them. \textit{Aim: } Our purpose is to identify Usability Evaluation Methods (UEM) which are being incorporated into ASDP and practicalities of its use. \textit{Method: }Based on primary studies of a previous systematic mapping study about application of usability methods in ASDP, we conducted an analysis of such methods through a compiled catalog of usability methods made by researchers of Software Engineering. Finally, we determine the form or type of application of each method into ASDP. \textit{Results: }The agile community show great interest in the incorporation of usability evaluation methods. However, there is no consensus on how to apply these techniques within the agile community. We identify four UEMs within the literature that are the most used in ASDP: Usability Test, Heuristic Evaluation, Thinking Aloud and Focus Group. \textit{Conclusions:} The analysis of usability evaluation methods and its use provided us specific methods that are being incorporated and an overview of activities performed to incorporate such methods into ASDP, which will be an input to define a unified framework of usability evaluating methods in ASDP.
 \input{tex/keywords}
 \end{abstract}
