--- a/tex/synthesis.tex
+++ b/tex/synthesis.tex
@@ -1,5 +1,5 @@
-\section{Uso de Técnicas de la IPO Relacionadas con la Evaluación en los Desarrollos Ágiles}\label{sec-synthesis}
+\section{Uso de Métodos de la IPO Relacionadas con la Evaluación en los Desarrollos Ágiles}\label{sec-synthesis}
 
-Hemos encontrado que la comunidad ágil ha adoptado una serie de técnicas de usabilidad en sus proyectos de desarrollo. Hemos clasificado las técnicas de usabilidad adoptadas en dos grupos. El primer grupo incluye todas las técnicas que se han adoptado tal cual, es decir, se han aplicado según lo recomendado por la IPO. El segundo grupo incluye las técnicas que han tenido que ser adaptadas para poder su adopción. Con el fin de identificar las técnicas adoptadas en los PDSA, hemos examinado los estudios primarios pertenecientes al grupo de Integración de Prácticas. Luego, leímos cada documento cuidadosamente para identificar los nombres de todas las técnicas reportadas por el autor y su respectiva descripción. Es importante mencionar que algunos autores reportan la adopción de más de una técnica de usabilidad. Luego de leer sus respectivas descripciones, clasificamos cada técnica adoptada en los PDSA de acuerdo con el catálogo de técnicas de la IPO \cite{Ferre2005}. Esta tarea se llevó a cabo conjuntamente con expertos en el área como parte de las sesiones de trabajo destinadas a identificar qué técnicas del catálogo habían sido adoptadas por los PDSA. Para identificar estas técnicas, no consideramos los nombres dados por los autores de los estudios primarios, por dos razones. En primer lugar, porque estos autores no usan los nombres de las técnicas comúnmente aceptados por el área de la IPO para cada técnica. En segundo lugar, porque los autores de los estudios primarios al no ser expertos en usabilidad, ni en el catalogo de técnicas, podían asignar de manera errónea los nombres a las mismas. Por tanto, solo consideramos la descripción dada por el autor que adoptó la técnica. Obsérvese que algunas de las técnicas y su respectiva descripción requerían de un análisis más profundo para identificar la técnica de la IPO en el catálogo. Encontramos que los PDSA han adoptado 13 de las 39 (33.33\%) técnicas de evaluación de la usabilidad. Las 39 técnicas se encuentran agrupadas en tres grandes grupos: Evaluaci\'on por expertos, Test de Usabilidad y Estudio de seguimiento de sistemas instalados. En el grupo de Evaluaci\'on por expertos, la t\'ecnica más adoptada por los autores es la Evaluaci\'o Heur\'istica. En las técnicas del grupo Test de Usabilidad, la que lleva el mismo nombre, Test de Usabilidad, ha sido la más adoptada. En el grupo de Estudio de seguimiento encontramos que la técnica de Cuestionarios es la más adoptada. La Tabla \ref{table:eval} resume las técnicas de la IPO relacionadas con las actividades de Evaluación que identificamos están siendo adoptadas por los PDSA. Para cada t\'ecnica, se especifica el tipo de actividad de Evaluación con la que se relaciona, el nombre gen\'erico de la t\'ecnica, el nombre dado por los diferentes autores en la literatura de la IPO, el nombre utilizado por los autores de los PDSA, las referencias correspondientes y el nivel de adopción (pura que significa tal cual como lo prescribe la IPO o con adaptaciones).\par
+Hemos encontrado que la comunidad ágil ha adoptado una serie de métodos de usabilidad en sus proyectos de desarrollo. Hemos clasificado los métodos de usabilidad adoptadas en dos grupos. El primer grupo incluye todos los métodos que se han adoptado tal cual, es decir, se han aplicado según lo recomendado por la IPO. El segundo grupo incluye los métodos que han tenido que ser adaptadas para poder su adopción. Con el fin de identificar los métodos adoptadas en los PDSA, hemos examinado los estudios primarios pertenecientes al grupo de Integración de Prácticas. Luego, leímos cada documento cuidadosamente para identificar los nombres de todas los métodos reportados por el autor y su respectiva descripción. Es importante mencionar que algunos autores reportan la adopción de más de un método de usabilidad. Luego de leer sus respectivas descripciones, clasificamos cada método adoptada en los PDSA de acuerdo con el catálogo de métodos de la IPO \cite{Ferre2005}. Esta tarea se llevó a cabo conjuntamente con expertos en el área como parte de las sesiones de trabajo destinadas a identificar qué métodos del catálogo habían sido adoptadas por los PDSA. Para identificar estos métodos, no consideramos los nombres dados por los autores de los estudios primarios, por dos razones. En primer lugar, porque estos autores no usan los nombres de los métodos comúnmente aceptados por el área de la IPO para cada método. En segundo lugar, porque los autores de los estudios primarios al no ser expertos en usabilidad, ni en el catalogo de métodos, podían asignar de manera errónea los nombres a las mismas. Por tanto, solo consideramos la descripción dada por el autor que adoptó el método. Obsérvese que algunas de los métodos y su respectiva descripción requerían de un análisis más profundo para identificar el método de la IPO en el catálogo. Encontramos que los PDSA han adoptado 13 de las 39 (33.33\%) UEMs. Los 39 métodos se encuentran agrupadas en tres grandes grupos: Evaluaci\'on por expertos, Test de Usabilidad y Estudio de seguimiento de sistemas instalados. En el grupo de Evaluaci\'on por expertos, la t\'ecnica más adoptada por los autores es la Evaluaci\'o Heur\'istica. En los métodos del grupo Test de Usabilidad, la que lleva el mismo nombre, Test de Usabilidad, ha sido la más adoptada. En el grupo de Estudio de seguimiento encontramos que el método de Cuestionarios es la más adoptada. La Tabla \ref{table:eval} resume los métodos de la IPO relacionadas con las actividades de Evaluación que identificamos están siendo adoptadas por los PDSA. Para cada t\'ecnica, se especifica el tipo de actividad de Evaluación con la que se relaciona, el nombre gen\'erico de la t\'ecnica, el nombre dado por los diferentes autores en la literatura de la IPO, el nombre utilizado por los autores de los PDSA, las referencias correspondientes y el nivel de adopción (pura que significa tal cual como lo prescribe la IPO o con adaptaciones).\par
 
 %[ESTO QUE ESTAMOS CONTANDO AQUÍ ES MÁS MÉTODO QUE OTRA COSA, PORQUE DECIMOS QUE ACTIVIDADES SE LLEVARON A CABO. POSIBLEMENTE SEA UNA BUENA IDEA INTEGRAR ESA SECCIÓN EN LA SECCIÓN MÉTODO DE INVESTIGACIÓN Y HACERLA UNA SOLA]
