--- a/tex/conclusions.tex
+++ b/tex/conclusions.tex
@@ -1,6 +1,7 @@
 \section{Conclusiones}\label{sec-conclusions}
+%John Se modifica añadiendo la egda y tercera oracion
+En esta investigación determinamos qué UEMs se están adoptando en los proyectos de desarrollo ágil y analizamos cómo se están adoptando. Además, identificamos cómo algunos de los PDSA están adaptando las UEMs para poder ser adoptadas. Identificamos que la mayoría (66\%) de adopciones de UEM reportadas en la literatura son propuestas adaptadas es decir, requieren de modificaciones para poder ser utilizadas dentro de un ambiente ágil. Las UEMs más utilizadas son Test de Usabilidad, Evaluación Heurística, Pensar en Voz Alta y Focus Groups. Por un lado, muchas UEMs pueden ser adoptadas tal cual lo prescribe la IPO (por ejemplo, Focus Groups), mientras que otras requieren de adaptaciones para poder ser adoptadas en algunos proyectos ágiles (por ejemplo, Evaluación Heurística y Test de Usabilidad). Sin embargo, estas adaptaciones no son generalizadas ni prescriptivas. Además estas adaptaciones son realizadas generalmente por practicantes de DCU que trabajan en conjunto con equipos ágiles, lo que hace necesario un mayor esfuerzo de investigación al respecto y determinar que UEMs pueden ser incorporadas en las actividades de Evaluación de los PDSA. Según los resultados de nuestro SMS, parece que no existen propuestas formalizadas de incorporación de las UEMs en los PDSA que establezcan guías de cómo incorporar cada método. Nuestra investigación busca realizar un aporte para intentar resolver este problema.\par
 
-En esta investigación determinamos qué UEMs se están adoptando en los proyectos de desarrollo ágil y analizamos cómo se están adoptando. Además, identificamos cómo algunos de los PDSA están adaptando las UEMs para poder ser adoptadas. Identificamos que la mayoría (66\%) de adopciones de UEM reportadas en la literatura son propuestas adaptadas es decir, requieren de modificaciones para poder ser utilizadas dentro de un ambiente ágil. Las UEMs más utilizadas son Test de Usabilidad, Evaluación Heurística, Pensar en Voz Alta y Focus Groups. Por un lado, muchas UEMs pueden ser adoptadas tal cual lo prescribe la IPO (por ejemplo, Focus Groups), mientras que otras requieren de adaptaciones para poder ser adoptadas en algunos proyectos ágiles (por ejemplo, Evaluación Heurística y Test de Usabilidad). Sin embargo, estas adaptaciones no son generalizadas ni prescriptivas. Además estas adaptaciones son realizadas generalmente por practicantes de DCU que trabajan en conjunto con equipos ágiles, lo que hace necesario un mayor esfuerzo de investigación al respecto y determinar que UEMs pueden ser incorporadas en las actividades de Evaluación de los PDSA. Según los resultados de nuestro SMS, parece que no existen propuestas formalizadas de incorporación de las UEMs en los PDSA que establezcan guías de cómo incorporar cada técnica. Nuestra investigación busca realizar un aporte para intentar resolver este problema.\par
 
 Nuestros resultados sugieren que la comunidad de desarrollo ágil está adoptando métodos de usabilidad en sus proyectos de desarrollo, con especial interés en las UEMs. Existen propuestas para aplicarlas tanto puras como con modificaciones, pero no hay un consenso de como será la mejor manera de adaptarlas. Esto puede deberse a la falta de una propuesta general, prescriptiva y sistemática que permita a los equipos de desarrollo ágiles adoptar métodos de usabilidad en sus proyectos de desarrollo.\par
 
