--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,11 +1,13 @@
 \section{Introducción}\label{sec-introduccion}
 La integración de los procesos de desarrollo de software ágiles (PDSA) (por ejemplo XP \cite{Beck1999} y SCRUM \cite{Cohn2009}) con el proceso de Desarrollo Centrado en el Usuario (DCU) ha sido objeto de investigación en los últimos años \cite{Humayoun2011,Salah2014b,Wale-Kolade2015}. Hemos percibido que este creciente interés se debe a que el DCU permite entender las necesidades reales de los usuarios del sistema, y cómo sus objetivos y actividades pueden ser soportados por el software para mejorar la usabilidad y la satisfacción de los usuarios que interactúan con el sistema. Sin embargo, dichas características no son tomadas en cuenta en los PDSA durante el diseño de la interacción del usuario con el sistema software \cite{Adikari2013}. Los desarrolladores ágiles experimentan frustración realizando las tareas relacionadas con la evaluación de la usabilidad debido a la brecha de integración existente entre los PDSA y el DCU \cite{Wale-Kolade2014}. La usabilidad es un atributo de calidad en el uso de los sistemas software y no solo radica en la apariencia de la interfaz de usuario, sino en cómo el usuario interactúa con el sistema \cite{Juristo2007}.\par
 
+%John: Se modifica segun comentario de revisor en la primera oracion
 Por un lado, en los PDSA la evaluación de las funcionalidades se hace en cada historia de usuario y en cada iteración. Según Cohn \cite{Cohn2009}, esta estrategia permite asegurar la calidad en cada historia de usuario ya que el equipo incluye tareas de evaluación como test funcionales y control de calidad realizadas por los miembros del equipo y test de aceptación de usuario o \textit{sprint reviews} en SCRUM, cuyo objetivo es validar el cumplimiento de los requisitos desarrollados en las historias de usuario. Por otro lado, el DCU nos permite poner al usuario en el centro de las actividades de análisis de requisitos, diseño y evaluación para mejorar la usabilidad del producto final \cite{Humayoun2011}. Los profesionales de DCU buscan involucrar al usuario aplicando métodos de DCU en un proceso colaborativo e iterativo que permita validar y evolucionar el producto con los usuarios en un contexto real \cite{Chamberlain2006,Fox2008,Anwar2014}. Por lo tanto, los profesionales de DCU y los equipos que utilizan los PDSA podrían ser compatibles, permitiendo así mejores experiencias de usuario.\par
 
 Sin embargo, la evaluación en los PDSA no prioriza la usabilidad desde el punto de vista de la disciplina de DCU. Esto ocurre cuando, por ejemplo, los requisitos de usabilidad se postergan por las necesidades de los clientes con mayor valor de negocio y no se consideran los distintos tipos de usuarios finales del sistema, dificultando la identificación de los problemas de usabilidad que puedan tener los usuarios finales con menor experiencia \cite{Kane2003,Sohaib2010}. El DCU, en cambio, tiene como uno de sus principios entender a todos los perfiles de los usuarios \cite{Sohaib2010}. Muchos autores de la disciplina de la Interacción Persona-Ordenador (IPO) afirman que los profesionales de DCU deben acoplar su mentalidad al proceso ágil \cite{Barksdale2009,Brown2013,Seyam2015}. Sin embargo, dicho acoplamiento no resulta del todo sencillo por dos razones. En primer lugar, muchos profesionales de DCU trabajan en equipos separados del equipo de desarrollo ágil, lo que hace que la cultura sea diferente entre ellos. En segundo lugar, muchos profesionales han tenido que desarrollar sus propias estrategias para mantener las prácticas de DCU en sintonía con la organización, mientras ésta adopta los PDSA \cite{Bertholdo2014}. Así, los profesionales de DCU deben adaptar métodos de usabilidad siguiendo su experiencia, y muchas de estos métodos de usabilidad requieren de tiempos y recursos que un proceso ágil no permite. Además, los procesos ágiles no proveen guías para este tipo de adaptaciones. \par
 
-El presente trabajo de investigación realiza un primer acercamiento en la identificación de como otros proyectos ágiles han incorporado UEM. Este artículo analiza los resultados de una revisión de la literatura previa \cite{Magues2016a} que busca identificar los métodos de usabilidad que están siendo incorporadas en los PDSA y cómo se están incorporando. El análisis detallado de cómo se están adaptando las UEM adoptadas en los PDSA será realizado como trabajo futuro y posteriormente proponer un marco de trabajo formalizado y sistematizado para que los practicantes de desarrollo ágil tengan una guía para el uso de estos métodos. Las contribuciones de nuestro trabajo son las siguientes:
+%John: Se modifica este parrafo en la ultima sentencia
+El presente trabajo de investigación realiza un primer acercamiento en la identificación de como otros proyectos ágiles han incorporado Métodos de Evaluación de la Usabilidad (UEM por sus siglas en inglés). Este artículo analiza los resultados de una revisión de la literatura previa \cite{Magues2016a} que busca identificar los métodos de usabilidad que están siendo incorporadas en los PDSA y cómo se están incorporando. El análisis detallado de cómo se están adaptando las UEM adoptadas en los PDSA será realizado como trabajo futuro y posteriormente proponer un marco de trabajo formalizado y sistematizado para que los practicantes de desarrollo ágil tengan una guía para el uso de estos métodos. Las contribuciones de nuestro trabajo son las siguientes:
 
 %[EL PROBLEMA QUE SE MENCIONAN EN EL PÁRRAFO ANTERIOR, PARA MI GUSTO, NO REPRESENTA UN PROBLEMA, SINO AL CONTRARIO ES YA UNA SOLUCIÓN. HABLAR DE UN PRIMER ACERCAMIENTO SIGNIFICA UNA ACCIÓN A TOMAR. CREO QUE EL PROBLEMA SIGUE SIENDO LA FALTA DE USABILIDAD ASOCIADO AL DESARROLLO ÁGIL. HAGO ESTE COMENTARIO, AUNQUE POSIBLEMENTE NO SIGNIFIQUE QUE CAMBIEMOS ALGO, PORQUE ES IMPORTANTE QUE DIFERENCIEMOS CLARAMENTE EL PROBLEMA QUE ESTAMOS ABORDANDO, LA PROPUESTA DE SOLUCIÓN Y LAS ACCIONES ASOCIADAS A LA MISMA]
 
