--- a/tex/method.tex
+++ b/tex/method.tex
@@ -1,6 +1,6 @@
 \section{Método de Investigación}\label{sec-SMS}
 
-A partir de los estudios primarios obtenidos en un SMS previo, hemos identificado las UEMs que se están utilizando en los PDSA. Posteriormente, hemos comparado lo reportado en los estudios primarios con lo prescrito por la IPO, para cada técnica identificada con el objetivo de identificar como se están incorporando en los PDSA. En la sección \ref{sec-synthesis} describimos el proceso seguido para realizar tal identificación. En esta sección presentamos un resumen del SMS realizado y los detalles del mismo pueden ser consultados en \cite{Magues2016a}. Las bases de datos electrónicas (BBDD) utilizadas en el SMS fueron \textit{Scopus}, \textit{ACM Digital Library} e \textit{IEEE Xplore}. La revisión abarca los trabajos publicados hasta el 15 de octubre del 2015. Inicialmente, al menos dos de los investigadores que participa en el SMS realiza una revisión inicial individual de literatura y propone un grupo de estudios que responden al objetivo planteado en el SMS, sin descuidar la fiabilidad del origen de dichos estudios. Esta revisión tiene como propósito identificar términos generales o comunes entre los estudios (y sus sinónimos), para conformar la cadena de búsqueda. La Tabla \ref{table:keywords} ilustra la cadena de búsqueda utilizada en el SMS.\par 
+A partir de los estudios primarios obtenidos en un SMS previo, hemos identificado las UEMs que se están utilizando en los PDSA. Posteriormente, hemos comparado lo reportado en los estudios primarios con lo prescrito por la IPO, para cada método identificado con el objetivo de identificar como se están incorporando en los PDSA. En la sección \ref{sec-synthesis} describimos el proceso seguido para realizar tal identificación. En esta sección presentamos un resumen del SMS realizado y los detalles del mismo pueden ser consultados en \cite{Magues2016a}. Las bases de datos electrónicas (BBDD) utilizadas en el SMS fueron \textit{Scopus}, \textit{ACM Digital Library} e \textit{IEEE Xplore}. La revisión abarca los trabajos publicados hasta el 15 de octubre del 2015. Inicialmente, al menos dos de los investigadores que participa en el SMS realiza una revisión inicial individual de literatura y propone un grupo de estudios que responden al objetivo planteado en el SMS, sin descuidar la fiabilidad del origen de dichos estudios. Esta revisión tiene como propósito identificar términos generales o comunes entre los estudios (y sus sinónimos), para conformar la cadena de búsqueda. La Tabla \ref{table:keywords} ilustra la cadena de búsqueda utilizada en el SMS.\par 
 
 %[CREO QUE DEBEMOS SER MÁS PRECISOS EN DESCRIBIR EL MÉTODO DE INVESTIGACIÓN, DADO QUE TAL CUAL ESTÁ EL PÁRRAFO ANTERIOR SE ENTIENDE QUE SE HIZO UNA SMS, LO CUAL NO ES ASÍ, SOLO SE UTILIZÓ DICHA SMS. DEBEMOS INDICAR EXPLÍCITAMENTE QUE EL MÉTODO CONSISTE DE TALES Y TALES ACTIVIDADES: LA PRIMERA, QUE NO SE CÓMO DESCRIBIRLA, FUE HACER ALGO CON LA SMS. NO SE SI ANALIZAMOS LA SMS EXTRAJIMOS CIERTAS PARTE O ALGO ASÍ. LA SEGUNDA ACTIVIDAD FUE UTILIZAR LO EXTRAÍDO DE LA SMS DE LA MANO CON EL TRABAJO DE FERRÉ PARA HACER ALGO. LUEGO RESUMIOS EL SMS, SEGUIDO DE UNA DESCRIPCIÓN DE LA SEGUNDA ACTIVIDAD. IMAGINO QUE ALGO ASÍ DEBERÍA SER ESTA SECCIÓN, QUE ADEMÁS RECUERDO QUE ME DIJISTE QUE ES LO QUE SE HIZO.]
 
@@ -32,10 +32,10 @@ Todos los miembros del equipo de investigación ayudaron a definir la estrategia 
 
 Los estudios primarios que estudiamos para analizar los métodos de usabilidad adoptadas en los PDSA se refieren a la integración de prácticas (31 publicaciones). La razón por la que seleccionamos este tipo de integración radica en que, como no se requieren cambios profundos en los procesos, sería más factible integrar los métodos de usabilidad en los PDSA, ya que no se requeriría de un gran esfuerzo para capacitar a los equipos de los PDSA, ni sería necesario realizar una inversión adicional para incluir nuevos roles en el equipo. Después de discutir cada artículo en las reuniones a las que asistieron todos los miembros del equipo de investigación, determinamos qué UEMs se han adoptado en los PDSA, proporcionando la descripción dada por el autor a cada método. Estos métodos se analizaron comparando la forma en que se aplicó el método en los PDSA con la recomendación original establecida por el área de la IPO. Se necesitaron varias iteraciones para identificar estos métodos. El proceso se complicó por el hecho de que los autores de los estudios primarios no utilizaron los nombres habituales del método utilizados comúnmente en la literatura de la IPO. Por lo tanto, fue necesario leer el documento más a fondo con el fin de identificar el método a la que los autores se refieren. A través de la descripción de los métodos adoptados en los PDSA, el uso de un catálogo de métodos de la IPO \cite{Ferre2005} y la consulta con expertos, se identificaron los métodos de usabilidad reportadas en la literatura que han sido adoptadas en los PDSA. Dos expertos en métodos de usabilidad participaron en este proceso de identificación. El resultado de este proceso dio lugar a una clasificación preliminar de los diferentes métodos de usabilidad relacionadas con las actividades de evaluación adoptadas en los PDSA.\par
 
-A continuación, analizamos cómo se adoptaron los métodos de usabilidad en las actividades de evaluación de los PDSA. Como resultado de este análisis, encontramos que algunas técnicas fueron adoptadas de acuerdo a las recomendaciones de la IPO, mientras que otras necesitaron adaptaciones para poder ser incorporadas. Para cada una de las técnicas adoptadas por los PDSA, identificamos las adaptaciones realizadas (discutidas en la Sección 5). Esta identificación resultó ser uno de los procesos más complejos, debido al hecho de que los autores de los estudios primarios solo describen la técnica de usabilidad adoptada, es decir estos autores no compararon la técnica de usabilidad con lo prescrito por la IPO. Esta comparación fue necesaria para poder identificar las adaptaciones realizadas a las técnicas.\par
+A continuación, analizamos cómo se adoptaron los métodos de usabilidad en las actividades de evaluación de los PDSA. Como resultado de este análisis, encontramos que algunos métodos fueron adoptadas de acuerdo a las recomendaciones de la IPO, mientras que otras necesitaron adaptaciones para poder ser incorporadas. Para cada una de los métodos adoptadas por los PDSA, identificamos las adaptaciones realizadas (discutidas en la Sección 5). Esta identificación resultó ser uno de los procesos más complejos, debido al hecho de que los autores de los estudios primarios solo describen el método de usabilidad adoptada, es decir estos autores no compararon el método de usabilidad con lo prescrito por la IPO. Esta comparación fue necesaria para poder identificar las adaptaciones realizadas a los métodos.\par
 
 %\begin{table}[htbp]
-%	\caption{Técnicas de Usabilidad de la IPO Relacionadas con la Evaluación Adoptadas por los PDSA}
+%	\caption{Métodos de Usabilidad de la IPO Relacionadas con la Evaluación Adoptadas por los PDSA}
 %	\centering
 %		\includegraphics[width=1.1\textwidth]{./images/TablaResumenTecnicas.png}
 %	%\label{fig:TabResumCriticas}
@@ -52,14 +52,14 @@ A continuación, analizamos cómo se adoptaron los métodos de usabilidad en las ac
 
 %\begin{table*}%[!t]
 \begin{table}
-  \caption{Técnicas de Usabilidad de la IPO Relacionadas con la Evaluación Adoptadas por los PDSA.}
+  \caption{Métodos de Usabilidad de la IPO Relacionadas con la Evaluación Adoptadas por los PDSA.}
   \label{table:eval}
   \centering
   \resizebox{\textwidth}{!}{%
 \begin{tabular}{|cc|c|c|>{\centering}p{3cm}|c|c|}
 \hline
 %1 header
-\rowcolor[gray]{0.8} \multicolumn{2}{|c|}{\textbf{Tipo de}} & \textbf{Técnica de} & \textbf{Nombre según} & \textbf{Nombre según} & \textbf{Ref.} & \textbf{Tipo de} \\
+\rowcolor[gray]{0.8} \multicolumn{2}{|c|}{\textbf{Tipo de}} & \textbf{Método de} & \textbf{Nombre según} & \textbf{Nombre según} & \textbf{Ref.} & \textbf{Tipo de} \\
 \rowcolor[gray]{0.8} \multicolumn{2}{|c|}{\textbf{Actividad}} & \textbf{la IPO}  & \textbf{Autores IPO} & \textbf{Autores PDSA} &  & \textbf{Aplicación}  \\
 \hline
 %126
